Pause instead of stop. Show ellipsis on text overflow in channel name. Remove "C# player" header.

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,10 @@ hr {
   position: absolute;
   left: 40px;
   line-height: 40px;
+  max-width: 137px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .channel .channel-toggle {
